--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <div class="navbar-item">
           <div class="buttons">
             <% if current_user %>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
+              <%= button_to "Logout", destroy_user_session_path, method: :delete, class: 'button is-link' %>
             <% else %>
               <%= link_to "Login", new_user_session_path, class: 'button is-link' %>
             <% end %>
